fixed table head scroll gap and some css

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -21,7 +21,7 @@ body{
     overflow: auto;
 }
 
-.table, th, td {
+.table tr, td {
     border: 1px solid #ddd;       
 }
 
@@ -31,21 +31,7 @@ body{
 .table tr:nth-child(even) {
     background-color: #ffffff;
 }
-.table-fixed thead {
-  width: 97%;
-}
-.table-fixed tbody {
-  height: 600px;
-  overflow-y: auto;
-  width: 100%;
-}
-.table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
-  display: block;
-}
-.table-fixed tbody td, .table-fixed thead > tr> th {
-  float: left;
-  border-bottom-width: 0;
-}
+
 #activity{cursor: pointer;}
 
 #headerLeft{  
